[package]
name = "awsacc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.15", features = ["derive"] }
directories = "4.0.1"
serde = { version = "1.0.145", features = ["serde_derive"] }
serde_yaml = "0.9.13"
thiserror = "1.0.37"
